# research

./: AGENTS.md  README.md  pyproject.toml  requirements-vad-test.txt  silero-vad-voice-agent-analysis.md  test_phone_vad_streaming.py
mquickjs-design-exploration/: 01_holistic_overview.md  02_memory_management.md  03_bytecode_execution.md  04_c_api_design.md  05_integration_and_patterns.md
sqlite-btree-analysis/: .gitignore  Makefile  README.md  visualize_benchmarks.py
sqlite-btree-analysis/benchmark_results/: benchmark_results.txt
sqlite-btree-analysis/docs/: ARCHITECTURE.md  TEST_PLAN.md
sqlite-btree-analysis/src/: benchmark.c  btree.c  btree.h
sqlite-btree-analysis/tests/: generate_tests.py  test_btree.c
src/silero_vad_phone_test/: __init__.py  cli.py  phone_simulator.py  streaming_vad.py
